# AgentFairBench

./: .gitattributes  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROTOCOL.md  README.md
data/: DATASHEET.md
data/names/: name_pools.json
data/profiles/: public_dev.jsonl
docs/: index.html
harness/: README.md  pyproject.toml
harness/agentfairbench/: __init__.py  cli.py  cost.py  data.py  metrics.py  models.py  runner.py  scaffolds.py
harness/tests/: test_metrics.py
leaderboard/: README.md  build_leaderboard.py  results.json
leaderboard/site/: index.html
leaderboard/submissions/: template.yaml
references/: CONSENSUS_AUDIT.md  bib_records.json
results/: FINDINGS.md  arity_null.json  c4_eval_baked.js  c4_tool_disparity.md  claude-haiku-4-5_report.json  claude-haiku-4-5_summary.md  pilot_eval_baked.js  pilot_tasks.json  reliability.md
results/raw/: claude-haiku-4-5_full_raw.jsonl  claude-haiku-4-5_raw.jsonl
scripts/: arity_null.py  build_data.py  combine_and_score.py  eval_workflow.js  make_c4_script.py  make_eval_script.py  make_figures.py  make_pilot_tasks.py  reliability.py  save_sections.py  score_pilot.py  verify_humanize.py
